--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <script src="/javascripts/app.js" async></script>
+    <script src="/javascripts/index/app.bundle.js" async></script>
   </body>
 </html>
